--- a/action.yml
+++ b/action.yml
@@ -88,6 +88,8 @@ inputs:
     name:
         description: 'Name of the Container Group Instance'
         required: true
+    network-profile-id:
+        description: "ID of the network-profile for this container."
     os-type:
         description: 'The OS type of the Containers. Accepted Values are  { Linux, Windows }'
         required: false
